--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,18 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.1.1",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-mixins": "^7.0.3",
+    "postcss-nested": "^5.0.4",
+    "postcss-simple-vars": "^6.0.3",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
